# advent

./: README.md
2020/: README.md
2020/day08/: Cargo.toml
2020/day11/: Cargo.toml
2020/day16/: Cargo.toml
2020/day17/: Cargo.toml
2020/day17/src/: part1.rs
2020/day18/: Cargo.toml
2020/day19/: Cargo.toml
2020/day20/: Cargo.toml
2020/day23/: Cargo.toml
2020/day24/: Cargo.toml
2020/day25/: Cargo.toml
2021/: Cargo.toml
2021/day01/: Cargo.toml
2021/day02/: Cargo.toml
2021/day03/: Cargo.toml
2021/day04/: Cargo.toml
2021/day05/: Cargo.toml
2021/day06/: Cargo.toml
2021/day07/: Cargo.toml
2021/day08/: Cargo.toml
2021/day09/: Cargo.toml
2021/day1/: Cargo.toml
2021/day10/: Cargo.toml
2021/day11/: Cargo.toml
2021/day12/: Cargo.toml
2021/day13/: Cargo.toml  input.txt  test_input.txt
2021/day14/: Cargo.toml
2021/day15/: Cargo.toml  input.txt  test_input.txt
2021/day16/: Cargo.toml
2021/day18/: Cargo.toml
2021/day2/: Cargo.toml
2021/day3/: Cargo.toml
2021/day4/: Cargo.toml
2024/: utils.py
2025/: .gitignore  README.md  day-01.exs  day-02.exs  day-03.exs  day-04.exs  day-05.exs  day-06.exs  erl_crash.dump  new_day.exs
day01/: Cargo.toml
day06/: Cargo.toml
day10/: Cargo.toml
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day17/: Cargo.toml
day18/: input.txt
day2/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day25/: Cargo.toml
day3/: Cargo.toml  output.txt
day4/: Cargo.toml
day5/: Cargo.toml
day7/: Cargo.toml
day9/: Cargo.toml
(+89 files in other folders)
