[package]
name = "day17"
version = "0.1.0"
authors = ["Michael Smedes <smichaelmedes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"

[[bin]]
path = "src/part2.rs"
name = "part2"

[[bin]]
path = "src/part1.rs"
name = "part1"